v0.2 A lot of changes to headlines, fixed issues with the gallery not updating properly, on mobile sizes

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -24,6 +24,16 @@ main {
   position: relative;
   margin: 0 20px;
 }
+h3, h2 {
+  font-weight: 800;
+  text-shadow: 3px 3px 5px;
+  margin-top: 5%;
+  margin-bottom: 5vh;
+}
+h3 {
+  justify-self: center;
+  text-align: center;
+}
 #intro-title {
   color: white;
   text-shadow: 3px 3px 5px hsl(152, 69%, 31%);
@@ -32,7 +42,7 @@ main {
   text-align: center;
   font-size: 70px;
   font-weight: 900;
-  margin: 2%;
+  margin: 3%;
 }
 .logo img {
   
@@ -311,12 +321,7 @@ a {
   text-decoration: none;
 
 }
-h3, h2 {
-  font-weight: 800;
-  text-shadow: 3px 3px 5px;
-  justify-self: center;
-  margin-bottom: 5vh;
-}
+
 
 .emoji {
   width: 40px;
@@ -341,30 +346,54 @@ fieldset div {
   width: 90%;
 
 }
-@media (max-width: 1150px) {
-  #intro-title {
-    font-size: 3em;
-  }
-}
-@media (max-width: 1070px) {
-  .nav-links {
-    display: none;
-    
-  }
-  #header-headline {
-    display: none;
-  }
-  #head-buttons-div {
-    display: none;
-  }
-  .hamburger {
-    display: block;
 
+
+@media (max-width: 750px) {
+  iframe {
+    height: 40vh;
+    margin-bottom: 5vh;
+  }
+  #val-photo, #colloseo, #libro {
+    
+    width: 85vw;
+    float: unset;
+  }
+  #intro-title {
+    font-size: 2em;
+  }
+  #galleria-pics-div {
+    display: block;
+    justify-items: center;
+  }
+  .galleria {
+    display: block;
+    width: 90vw;
+    margin: 5% 0;
+  }
+  .galleria:hover:nth-child(3n) {
+    transform-origin: 0 0;
+  }
+  .galleria:hover:nth-child(3n - 1) {
+    transform-origin: 0 0;
+  }
+  .galleria:hover {
+    transform: scale(1);
+  }
+  #libro-div {
+    
+    padding: 5%;
+  }
+  #libro-div img {
+    display: flex;
+    justify-self: center;
+  }
+  .prenota-p {
+    width: 95vw;
   }
 }
 
 @media (max-width: 900px) {
-
+ 
   .logo img {
     
     display: block;
@@ -390,45 +419,6 @@ fieldset div {
 }
 
 
-@media (max-width: 750px) {
-  iframe {
-    height: 40vh;
-    margin-bottom: 5vh;
-  }
-  #val-photo, #colloseo, #libro {
-    
-    width: 85vw;
-    float: unset;
-  }
-  #intro-title {
-    font-size: 2em;
-  }
-  .galleria {
-    display: block;
-    max-width: 90vw;
-    margin: 5% 0;
-  }
-  .galleria:hover:nth-child(3n) {
-    transform-origin: 0 0;
-  }
-  .galleria:hover:nth-child(3n - 1) {
-    transform-origin: 0 0;
-  }
-  .galleria:hover {
-    transform: scale(1);
-  }
-  #libro-div {
-    
-    padding: 5%;
-  }
-  #libro-div img {
-    display: flex;
-    justify-self: center;
-  }
-  .prenota-p {
-    width: 95vw;
-  }
-}
 
 
 @media (min-width: 1071px) {
@@ -439,5 +429,28 @@ fieldset div {
   .hamburger {
     display: none;
 
+  }
+  
+}
+
+@media (max-width: 1070px) {
+  .nav-links {
+    display: none;
+    
+  }
+  #header-headline {
+    display: none;
+  }
+  #head-buttons-div {
+    display: none;
+  }
+  .hamburger {
+    display: block;
+
+  }
+}
+@media (max-width: 1150px) {
+  #intro-title {
+    font-size: 3em;
   }
 }
